Fix: Geração do pdf